# xiaomaolv

./: .env.realtest.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md
.factory/validation/scrutiny/reviews/: task-2-context-compaction.json  task-3-tool-call-verification.json  task-4-observability-dashboard.json
config/: xiaomaolv.example.toml  xiaomaolv.minimax-telegram.toml
docs/: code-mode-observability.md  engineering-quality.md  mcp-integration.md  real-test-minimax-telegram.md  zvec-sidecar.md
docs/plans/: 2026-02-23-xiaomaolv-rust-design.md  2026-02-23-zvec-memory-design.md  2026-02-25-rust-architecture-hardening-design.md  2026-02-25-telegram-group-context-intelligence.md  2026-02-25-telegram-scheduler-design.md  2026-03-24-agent-harness-optimization.md
scripts/: debug_telegram_polling.sh  perf_smoke.sh  requirements-zvec-sidecar.txt  run_mvp_minimax_telegram.sh  run_zvec_sidecar.sh  set_telegram_webhook.sh  zvec_sidecar.py
src/: channel.rs  code_mode.rs  config.rs  domain.rs  http.rs  lib.rs  main.rs  mcp.rs  mcp_commands.rs  memory.rs  provider.rs  scheduler.rs  service.rs  skills.rs  skills_commands.rs
src/channel/: group_pipeline.rs  scheduler_helpers.rs  telegram_commands.rs  telegram_markdown.rs  telegram_rules.rs  telegram_stream.rs  tests.rs  update_pipeline.rs  workers.rs
src/harness/: compactor.rs  mod.rs  observability.rs  trajectory.rs  verifier.rs
tests/: agent_swarm_store.rs  channel_plugin_api.rs  config_bootstrap.rs  config_ui.rs  harness_compactor.rs  harness_observability.rs  harness_trajectory.rs  harness_verifier.rs  http_api.rs  hybrid_memory_sidecar.rs  mcp_commands.rs  memory_store.rs  provider_plugin_api.rs  scheduler_domain.rs  scheduler_store.rs  service_mcp_reload.rs  service_pipeline.rs  service_skills_runtime.rs  service_streaming.rs  skills_commands.rs  skills_registry.rs  telegram_channel_mode.rs
